--- a/indeks.html
+++ b/indeks.html
@@ -313,7 +313,7 @@
 			   <br>
 			&#x2B9E; Podniesienie świadomości na temat znaczenia zdrowych relacji we współczesnym świecie;<br>
 			&#x2B9E; Wzmacnanie uczucia empatii wśród młodzieży oraz młodych dorosłych;<br>
-			&#x2B9E; Zwalczanie hejtu w Inernecie i pormocja odpowiedzialnego obcowania z siecią.
+			&#x2B9E; Zwalczanie hejtu w Inernecie i promocja odpowiedzialnego obcowania z siecią.
         </div>
     </div>
 
